# TlQualification

./: .gitignore  README.md
code/: CMakeLists.txt  build.sh
code/include/: AbstractCachePolicy.h  BaseMacro.h  Cache.h  ConcreteCachePolicy.h  DefaultCachePolicy.h  LfuCachePolicy.h  LruCachePolicy.h  MruCachePolicy.h
code/src/: main.cpp
ft/: CMakeLists.txt  build.sh  build.sh~
ft/surpport-ft/include/: FtMacro.h
ft/test-case/: google_main.cpp  google_main.cpp~  test_lru_policy.cpp  test_mru_policy.cpp
